Fix the multiple project details by removing the previeus ones and fix the height on mobile version

--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    max-height: 836px;
   }
 
   .project-info::-webkit-scrollbar {
@@ -244,7 +245,7 @@
     font-size: 16px;
     line-height: 24px;
     color: #344563;
-    margin: 1rem 0;
+    margin: 2rem 0;
   }
 
   .project_btns__container {
